# causaly-take-home-assessment

./: README.md  env.example  pyproject.toml
app/: main.py  models.py
app/agent/: planner.py  prompts.py  tools.py
app/graph/: builder.py
app/parsing/: go_parser.py  kegg_parser.py
app/utils/: openai_client.py
